--- a/package.json
+++ b/package.json
@@ -8,8 +8,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.16",
+    "@material-ui/core": "^4.11.4",
+    "@metamask/onboarding": "^1.0.0",
+    "@prisma/client": "^2.22.1",
+    "clsx": "^1.1.1",
+    "eth-sig-util": "^3.0.1",
+    "ethereumjs-util": "^7.0.10",
+    "graphql": "^15.5.0",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-spinners": "^0.10.6",
+    "react-use-promise": "^0.3.1",
+    "rebass": "^4.0.7",
+    "styled-components": "^5.3.0",
+    "swr": "^0.5.6",
+    "typewriter-effect": "^2.17.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.4",
+    "prisma": "^2.22.1",
+    "typescript": "^4.2.4"
   }
 }
